test/oscar/compiler/errors/uopMismatch.oscar
def main() => unit = {
  string s1 = "test";
  println(-s1);
}